MB LF | Fixed input box border styling and add z-index

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -82,6 +82,7 @@ button, input[type=text], input[type=url], input[type=email], input[type=passwor
 .input-container {
   background-color: white;
   position: fixed;
+  z-index: 100;
   bottom: 0;
   left:0;
   width:100%;
@@ -90,6 +91,8 @@ button, input[type=text], input[type=url], input[type=email], input[type=passwor
   .answer {
     width: 90vw - $button-width;
     border-radius: 10px;
+    outline: none;
+    border: 2px solid $border-color;
     background-color: $light-grey;
     height: $input-height;
     // margin: 0 15px;
@@ -255,4 +258,3 @@ button, input[type=text], input[type=url], input[type=email], input[type=passwor
     margin-top: 70%;
   }
 }
-
